--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img src="images/me.png" alt="my pic">
       <h2>Hello.</h2>
-      <p class="Intro">I am a web developer in training. I aim to have the most beautifully styled sites with great functionality.</p>
+      <p class="Intro">I am a software support specialist who loves developing fun, useful websites. I aim to have the most beautifully styled sites with great functionality.</p>
     </div>
     <hr>
     <div class="skills">
@@ -31,32 +31,25 @@
       <div class="skill-row">
         <img class="Python" src="images/python.png" alt="python-pic">
         <h3>Coding languages</h3>
-        <p>I have been on a journey to learn coding languanges of all types to gain all the tools I can get to become a great developer.</p>
+        <p>I have studied many coding languages so I can become a great developer.</p>
         <div class="ref">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     <hr>
       </div>
       <div class="skill-row">
-        <img class="Gaming" src="images/playstation.png" alt="gaming-pic">
-        <h3>Video Games</h3>
-        <p>I have been told I should be creating video games since I was a kid. So I downloaded a game called DREAMS and did just that. It was my first actual prgramming experience and I fell in love with figuring things out that happen behind the
-        scenes.</p>
-        <div class="refer">Icons made by <a href="https://www.flaticon.com/authors/istar-design-bureau" title="istar_design_bureau">istar_design_bureau</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-      </div>
+        <img class="Gaming" src="images/sqllogo.png" alt="SQL-pic">
+        <h3>Databases</h3>
+        <p>I have advanced skills in SQL and managing databases with large companies .</p>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3 class="contact-message">If you have a need to know as much about programming as me then we should chat!</h3>
-      <p class="closer">I'm always down to talk code or programming!</p>
+      <h3 class="contact-message">II want to make your dream website so lets chat!</h3>
       <a class="btn" href="mailto:richardmarrujo@yahoo.com">CONTACT ME</a>
     </div>
   </div>
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.mygaragepros.com/">My Garage Pros</a>
-    <a class="footer-link" href="https://codepen.io/richardmarrujo/pen/Bawawwd">Driver Rater</a>
-    <a class="footer-link" href="https://richardmarrujo.github.io/enzo/">Enzo Marrujo</a>
-    <a class="footer-link" href="https://richardmarrujo.github.io/Br-Ba/">Breaking Bad image</a>
+    <a class="footer-link" href="https://richardmarrujo.github.io/Road-Rater/">Road Rater</a>
     <a class ="footer-link" href="https://github.com/richardmarrujo"> My Github </a>
     <p class="copyright"> © Richard Marrujo.</p>
 
